Committing show.html before making modifications for presentation

--- a/show.html
+++ b/show.html
@@ -24,7 +24,38 @@
 <div class="div_body_main">
 <div class="div_body_mid_column3">
 <div class="div_body_left_column">
-
+<div class="left_blocks">
+<div class="left_blocks_links" id='lf_ctr' ><a href="javascript:void(0)" onclick=getthem() rel="tooltip" title="Refresh">
+Refresh</a>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+<div class="clear"> </div>
+</div>
+</div>
 </div>
 <div class="mid_main3">
 <div id='disp_user'>
