Temporary change to show.html before i make the code change, so i can compare

--- a/show.html
+++ b/show.html
@@ -58,8 +58,74 @@ Refresh</a>
 </div>
 </div>
 <div class="mid_main3">
+
+
 <div id='disp_user'>
+<div class="left_blocks">
+<div class="left_block_links">  
+<a href='javascript:void' onclick="$('#1_div').toggle()" > chiddu@gmail.com  </a> </div>
 </div>
+
+<div width='100%' id='1_div'>
+<table style='width:60%; border:none' >
+<tr class='tr1'> 
+<td class='td1'>Name</td>
+<td class='td2'>Chidambaran Subramanian</td>
+</tr>
+<tr class='tr1'> 
+<td class='td1'>Name</td>
+<td class='td2'>Chidambaran Subramanian</td>
+</tr>
+<tr class='tr1'> 
+<td class='td1'>Name</td>
+<td class='td2'>Chidambaran Subramanian</td>
+</tr>
+<tr class='tr1'> 
+<td class='td1'>Name</td>
+<td class='td2'>Chidambaran Subramanian</td>
+</tr>
+<tr class='tr1'> 
+<td class='td1'>Name</td>
+<td class='td2'>Chidambaran Subramanian</td>
+</tr>
+</table>
+</div>
+
+</div>
+<div id='disp_user'>
+<div class="left_blocks">
+<div class="left_block_links">  
+<a href='javascript:void' onclick="$('#2_div').toggle()" > chiddu@gmail.com  </a> </div>
+</div>
+
+<div width='100%' id='2_div'>
+<table style='width:60%; border:none' >
+<tr class='tr1'> 
+<td class='td1'>Name</td>
+<td class='td2'>Chidambaran Subramanian</td>
+</tr>
+<tr class='tr1'> 
+<td class='td1'>Name</td>
+<td class='td2'>Chidambaran Subramanian</td>
+</tr>
+<tr class='tr1'> 
+<td class='td1'>Name</td>
+<td class='td2'>Chidambaran Subramanian</td>
+</tr>
+<tr class='tr1'> 
+<td class='td1'>Name</td>
+<td class='td2'>Chidambaran Subramanian</td>
+</tr>
+<tr class='tr1'> 
+<td class='td1'>Name</td>
+<td class='td2'>Chidambaran Subramanian</td>
+</tr>
+</table>
+</div>
+
+</div>
+
+
 </div>
 </div>
 
