--- a/show.html
+++ b/show.html
@@ -61,67 +61,6 @@ Refresh</a>
 
 
 <div id='disp_user'>
-<div class="left_blocks">
-<div class="left_block_links">  
-<a href='javascript:void' onclick="$('#1_div').toggle()" > chiddu@gmail.com  </a> </div>
-</div>
-
-<div width='100%' id='1_div'>
-<table style='width:60%; border:none' >
-<tr class='tr1'> 
-<td class='td1'>Name</td>
-<td class='td2'>Chidambaran Subramanian</td>
-</tr>
-<tr class='tr1'> 
-<td class='td1'>Name</td>
-<td class='td2'>Chidambaran Subramanian</td>
-</tr>
-<tr class='tr1'> 
-<td class='td1'>Name</td>
-<td class='td2'>Chidambaran Subramanian</td>
-</tr>
-<tr class='tr1'> 
-<td class='td1'>Name</td>
-<td class='td2'>Chidambaran Subramanian</td>
-</tr>
-<tr class='tr1'> 
-<td class='td1'>Name</td>
-<td class='td2'>Chidambaran Subramanian</td>
-</tr>
-</table>
-</div>
-
-</div>
-<div id='disp_user'>
-<div class="left_blocks">
-<div class="left_block_links">  
-<a href='javascript:void' onclick="$('#2_div').toggle()" > chiddu@gmail.com  </a> </div>
-</div>
-
-<div width='100%' id='2_div'>
-<table style='width:60%; border:none' >
-<tr class='tr1'> 
-<td class='td1'>Name</td>
-<td class='td2'>Chidambaran Subramanian</td>
-</tr>
-<tr class='tr1'> 
-<td class='td1'>Name</td>
-<td class='td2'>Chidambaran Subramanian</td>
-</tr>
-<tr class='tr1'> 
-<td class='td1'>Name</td>
-<td class='td2'>Chidambaran Subramanian</td>
-</tr>
-<tr class='tr1'> 
-<td class='td1'>Name</td>
-<td class='td2'>Chidambaran Subramanian</td>
-</tr>
-<tr class='tr1'> 
-<td class='td1'>Name</td>
-<td class='td2'>Chidambaran Subramanian</td>
-</tr>
-</table>
-</div>
 
 </div>
 
@@ -137,6 +76,7 @@ Refresh</a>
 <div class="footer" align="center">
 <div class="div_footer" align="left">© 2012-2013 Crunchtime Software Services LLP. </div>
 </div>
-
-
+<script type="text/javascript">
+getthem();
+</script>
 </body></html>
