Css files done, now to add the error messages

--- a/show.html
+++ b/show.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0023)http://127.0.0.1/search -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Groofer</title>
+<title>Showing list of user input</title>
 
 <link href="./css/crunchit.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="./js/jquery-1.9.1.js"></script>
@@ -13,7 +13,7 @@
 <div id="minHeight"></div>
 <div class="header" align="center">
 <div class="div_header">
-<div class="logo"><a href="javascript:void(0)"><img src="./images/logo01.gif" alt="Groofer" border="0"></a></div>
+<div class="logo"></div>
 <div class="header_search"> 
 </div>
 <div class="clear"></div>
