Left hand side, basic formatting

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ List Fields&nbsp;</a>
 <a href="javascript:void(0)" rel="tooltip" title="Real"
 onclick='addfield()' >Add Field</a>
 <div id="field_alltypes" style='display:none' >
-<div class="left_delr field0" id="def_textf" onclick='showTextFields(this)' > Text Field </div>
-<div class="left_delr field0" id="def_drop" onclick='showDdFields(this)'> Drop Down </div>
+<div class="left_delr field0" id="def_textf"> &nbsp; &nbsp;<a href="javascript:void(0)" onclick='showTextFields(this)' > Text Field </a></div>
+<div class="left_delr field0" id="def_drop"> &nbsp; &nbsp;<a href="javascript:void(0)"onclick='showDdFields(this)'> Drop Down </a></div>
 </div>
 </div>
 
