Yet another set of files committed

--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@ These are the current list of fields
 <div> Here are the list of fields that are going to be displayed </div>
 
 <table class='divTable' id='id_table_list' >
-<tr class='tr1'>
+<thead>
 <th class='th1'> Field Name  </th>
-<th class='th1'> Field Type   </th>
-</tr>
+<th class='th2'> Field Type   </th>
+</thead>
 </table>
 
 </div>
