Fixing index.html

--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@ Add Page &nbsp;</a>
 <li align=left> Styles, colours, backgrounds, etc. The final pages will have divs with specified class names, and these will be saved in a separate file, and before deployment can be edited to perfect the look and feel</li>
 <li align=left> The solution will add fields to the database, and finally provide a css file.This css file can be used to customize the html pages (change alignments, fonts, restructure the relative 'divs' in the page. Reposition them. </li>
 <li align=left> Other fields like checkboxes, etc can be easily added. The design already allows it </li>
-<li align=left> The html needs to be designed a bit, with the sample style sheets. </div>
+<li align=left> The html needs to be designed a bit, with the sample style sheets. </li>
 </ol>
 </p>
-<p align=left> <b>Other stuff conceptualized, and essnetially doable </b>
+<p> <b>Other stuff conceptualized, doable, but not yet done. </b>
 <ol>
 <li align=left> Configurable html for the page </li>
 <li align=left> Conditional fields - meaning certain data needs to be collected, only on certain input</li>
