--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Add Page &nbsp;</a>
 <div class="clear"></div>
 
 </div>
-<div class="tf_center" align='left' id='tf_notice' style='display:block' >
+<div class="tf_center" align='left' id='tf_notice' style='display:none' >
 <p> Currently you can add 2 types of fields  , plain input (text) or a drop down.  The focus was on being able to create as many fields as you wish, and to spread it across pages.  The functionality for now is limited to 
 <ol>
 <li align=left> Adding a text field </li>
@@ -160,13 +160,13 @@ Add Page &nbsp;</a>
 </p>
 </div>
 
-<div class="tf_center" id='tf_field_list' style='display:none' >
+<div class="tf_center" id='tf_field_list' style='display:block' >
 These are the current list of fields
 <hr>
 <div id='id_field_list0' class='section02'>  
 <div> Here are the list of fields that are going to be displayed </div>
 
-<table class='divTable' id='id_table_list' >
+<table class='divTable' id='id_table_list' style='display:block' >
 <thead>
 <th class='th1'> Field Name  </th>
 <th class='th2'> Field Type   </th>
