added the message in front

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ Add Page &nbsp;</a>
 <div class="clear"></div>
 
 </div>
-<div class="tf_center" align='left' id='tf_notice' style='display:none' >
+<div class="tf_center" align='left' id='tf_notice' style='display:block' >
 <p> Currently you can add 2 types of fields  , plain input (text) or a drop down.  The focus was on being able to create as many fields as you wish, and to spread it across pages.  The functionality for now is limited to 
 <ol>
 <li align=left> Adding a text field </li>
