Committing a display change. The drop down values are now displayed

--- a/index.html
+++ b/index.html
@@ -355,10 +355,9 @@ Name this condition :
 </div>
 
 
-
 <div class="tf_center tf_field" id='actual_page_demo' style='display:none' >
 <div><strong><em>
-This is a non-visual preview of the actual page 
+This is an approximate preview of the actual page 
 </em></strong> </div>
 <div> <hr></div>
 <div class="clear"></div>
