--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     {
        display:table-row;
        width:auto;
+			 height:20px
 
     }
 
@@ -38,6 +39,7 @@
         display:table-column;
         width:160px;
         background-color:#ccc;
+				height:20px;
 
     }
     .divCell2
@@ -45,6 +47,7 @@
         float:left;/*fix for  buggy browsers*/
         display:table-column;
         width:20px;
+			 height:20px;
 
     }
 </style>
