Adding the pixel spacing

--- a/index.html
+++ b/index.html
@@ -156,6 +156,15 @@ Add Page &nbsp;</a>
 </td>
 </tr>
 
+<tr class='tr1'>
+<td class='td1'> 
+<input type=button name=b_addpara value='Add spacing' onclick='addSpacing()' class='b_addbutt'/>
+</td>
+<td class='td2'>
+<input type=text name=b_spacing value='10' onclick='addSpacing()' class='tf_text_name'/>px
+</td>
+</tr>
+
 <tr class='tr1' id='b_adddisp_tr'>
 <td class='td1'> 
 <input type=button name=b_adddisp value='Display user-entered input' onclick='addDisplayToPage()' class='b_addbutt'/>
