Saving work , after adding a bunch of pixels

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Add Page &nbsp;</a>
 <input type=button name=b_addpara value='Add spacing' onclick='addSpacing()' class='b_addbutt'/>
 </td>
 <td class='td2'>
-<input type=text name=b_spacing value='10' onclick='addSpacing()' class='tf_text_name'/>px
+<input type=text name=fd_spacing id='fd_spacing' value='10' class='text_right'/>px
 </td>
 </tr>
 
